--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,20 @@ body {
 ul {
   list-style: none;
 }
+/* a {
+  text-decoration: none;
+} */
 a {
+  color: #8794ba;
   text-decoration: none;
 }
+a:hover {
+  color: white;
+}
+button:hover {
+  scale: 1.3;
+}
+
 .angle {
   background-image: url("/img/background-top.png");
   max-width: 1600px;
@@ -53,6 +64,9 @@ a {
 .logo {
   width: 184.02px;
   height: 40px;
+}
+.logo:hover {
+  scale: 1.2;
 }
 .menu-header {
   width: 352px;
@@ -109,12 +123,19 @@ a {
 /* .create-line {
   display: none;
 } */
+.big-header {
+  display: flex;
+  max-width: 1600px;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: space-around;
+}
 .big-header-left {
   width: 550px;
   height: 315px;
   border: 1px solid black;
   margin-top: 152px;
-  margin-left: 210px;
+  /* margin-left: 210px; */
   /* margin: 0 auto; */
 }
 .sub {
@@ -502,7 +523,8 @@ span {
   border: 1px solid black;
 }
 .central {
-  width: 962px;
+  max-width: 962px;
+  width: 100%;
   height: 522px;
   margin: 109px auto;
   display: flex;
@@ -587,7 +609,7 @@ span {
   margin-left: 26px;
   /* margin-top: -41px; */
   background-color: #ffffff;
-  /* border-radius: 8px; */
+  border-radius: 8px;
   /* padding: 32px 40px 32px 40px; */
   padding-top: 32px;
   display: flex;
@@ -740,6 +762,10 @@ span {
   .try-for-free {
     width: 335px;
   }
+  .big-header {
+    max-width: 767px;
+    width: 100%;
+  }
   .monitor {
     font-family: "Roboto";
     font-style: normal;
@@ -890,14 +916,20 @@ span {
     display: none;
   }
   .central {
-    max-width: 768px;
+    max-width: 767px;
+    width: 100%;
     margin: 35px auto;
   }
   .login {
+    max-width: 767px;
+    width: 100%;
     min-height: 595px;
+    height: 100%;
   }
   .forms {
     box-shadow: none;
+    margin: 0 auto;
+    margin-bottom: 35px;
   }
   .center1 {
     display: none;
